--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ openai = "^1.30.5"
 jinja2 = "^3.1.4"
 datasets = "^2.19.2"
 lftk = "^1.0.9"
+plotly = "^5.22.0"
+orjson = "^3.10.3"
 
 [tool.poetry.group.dev.dependencies]
 jupyterlab = "^4.2.1"
