--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,2 @@
 LTC_OPENAI_KEY=<xx-xxxx-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx>
+LTC_GOOGLE_API_KEY=<AIxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx>
