--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ plotly = "^5.22.0"
 orjson = "^3.10.3"
 scipy = "^1.13.1"
 python-dotenv = "^1.0.1"
+google-cloud-aiplatform = "^1.54.0"
 
 [tool.poetry.group.dev.dependencies]
 jupyterlab = "^4.2.1"
