--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ orjson = "^3.10.3"
 scipy = "^1.13.1"
 python-dotenv = "^1.0.1"
 google-cloud-aiplatform = "^1.54.0"
+anthropic = {version = "^0.28.0", extras = ["vertex"]}
 
 [tool.poetry.group.dev.dependencies]
 jupyterlab = "^4.2.1"
