--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ authors = ["Andrei Olar <andrei.olar@ubbcluj.ro>"]
 readme = "README.md"
 packages = [{include = "llm_tst_consistency", from = "src"}]
 
+[tool.poetry.scripts]
+evaluator = "llm_tst_consistency.evaluator:cli"
+
 [tool.poetry.dependencies]
 python = "^3.11"
 pandas = "^2.2.2"
@@ -21,6 +24,7 @@ python-dotenv = "^1.0.1"
 google-cloud-aiplatform = "^1.54.0"
 anthropic = {version = "^0.28.0", extras = ["vertex"]}
 kaleido = "0.2.1"
+typer = "^0.12.3"
 
 [tool.poetry.group.dev.dependencies]
 jupyterlab = "^4.2.1"
