--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ google-cloud-aiplatform = "^1.54.0"
 anthropic = {version = "^0.28.0", extras = ["vertex"]}
 kaleido = "0.2.1"
 typer = "^0.12.3"
+cohere = "^5.5.6"
 
 [tool.poetry.group.dev.dependencies]
 jupyterlab = "^4.2.1"
