add support for the yelp dataset

--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,6 @@ LTC_OLLAMA_HOST=127.0.0.1:11434
 LTC_COHERE_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 # Experiment Settings
-LTC_MAX_CORPUS_SIZE=100
+LTC_MAX_CORPUS_SIZE=1000
 LTC_EXAMPLE_COUNT=3
 LTC_TRIAL_COUNT=10
