--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ jobs:
         with:
           scheme: full
           run: |
-            apk add make git
+            apk add make git zip
             make build
       - name: Publish Article
         uses: actions/upload-artifact@v4
