--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,6 +17,7 @@ jobs:
           scheme: full
           run: |
             apk add make git zip
+            git config --global --add safe.directory /home/runner/work/llm-tst-consistency/llm-tst-consistency
             make build
       - name: Publish Article
         uses: actions/upload-artifact@v4
