--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,13 +18,14 @@ jobs:
           run: |
             apk add make git zip
             git config --global --add safe.directory /home/runner/work/llm-tst-consistency/llm-tst-consistency
+            make check-article
             make build
       - name: Publish Article
         uses: actions/upload-artifact@v4
         with:
           name: llm-tst-consistency-article
           path: ./article/*.pdf
-      - name: Publish Article
+      - name: Publish Source Code
         uses: actions/upload-artifact@v4
         with:
           name: llm-tst-consistency-source
